# Devops_Application_Lab_Testing

./: application.rar  package-lock.json
-final-lab/: docker-compose.yml  nginx.conf
-final-lab/backend/: Dockerfile  Jenkinsfile.advanced
-final-lab/frontend/: Dockerfile  Jenkinsfile.advanced  package-lock.json
-final-lab/k8s/: argocd-sm.yaml  deployment.yaml  deployment_backend.yaml  deployment_frontend.yaml  deployment_nginx.yaml
application/flask-example/: .dockerignore  README.md  app.py  docker-compose.yml
application/frontend-example/: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.advanced  README.md  index.html  package-lock.json  package.json  vite.config.js
application/java-example/: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.advanced  README.md  pom.xml
application/python-example/: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.advanced  README.md  app.py  requirements.txt  test_app.py
docker/: default.conf  index.html  lab-01.md  lab-02.md  lab-03.md
docker/solutions/: lab-01-solution.md  lab-02-solution.md  lab-03-solution.md
jenkins/: setup.rar
jenkins/setup/: .gitignore  Dockerfile.agent  Dockerfile.master  docker-compose.yml  jenkins-config.yaml  plugins.txt  registry-config.yml
kubernetes/examples/: deployment.yaml  pod.yaml  replica-set.yaml
kubernetes/flask/: deployment.yaml  service.yaml
linux/systemctl/: README.md  app.py  flask-app.service
python/: .gitignore  README.md
python/advanced/: .gitignore  INSTALL.md  MANIFEST.in  README.md  __init__.py  backup_config.py  cleanup_logs.py  common.py  disk_cleanup.py  full_report.py  health_check.py  linux_system_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  service_status.py  user_audit.py
python/examples/: 01-first-script.py  02-variables.py  03-command-arguments.py  04-control-logic.py  05-functions.py  (+3 more)
shell/: README.md
vagrant/: install-qemu.sh
(+117 files in other folders)
